# DLMS-COSEM

./: .gitignore  CMakeLists.txt  README.md  make.sh  serial_to_tcp.py  tcp_echo_server.py  vcpkg.json
Core/: .gitignore
Core/Inc/Linux/: .gitignore  Apps.h  BaseLibrary.h  COSEMClient.h  COSEMServer.h  Core.h  Debug.h  Memory.h  Scheduler.h  Serial.h  SimpleTimer.h  Socket.h  Synchronization.h
Core/Inc/Linux/Objects/: Clock.h  Data.h  ProfileNameplate.h  Register.h
Core/Inc/lib/DLMS-COSEM/: .gitignore  Callback.h  DLMSValue.h  DLMSVector.h  DateTime.h  ERROR_TYPE.h
Core/Inc/lib/DLMS-COSEM/APDU/: ACCESS-Request.h  ACCESS-Response.h  ACTION-Request.h  ACTION-Response.h  APDU.h  APDUComponent.h  APDUConstants.h  APDUDefs.h  APDUFactory.h  ASNType.h  GET-Request.h  GET-Response.h  SET-Request.h  SET-Response.h  xDLMS.h
Core/Inc/lib/DLMS-COSEM/COSEM/: COSEM.h  COSEMDevice.h  COSEMEngine.h  COSEMObjectInstanceID.h  COSEMSecurity.h  COSEMSecuritySuite.h  COSEMTypes.h
Core/Inc/lib/DLMS-COSEM/Device/: Association.h  LogicalDevice.h  SecuritySetup.h  StateMachine.h
Core/Inc/lib/DLMS-COSEM/ITemplates/: ICore.h  IDebug.h  ISerial.h  ISocket.h
Core/Inc/lib/DLMS-COSEM/interfaces/: COSEMAttribute.h  COSEMData.h  COSEMMethod.h  IAssociationLN.h  ICOSEMInterface.h  IClock.h  IData.h  IProfileGeneric.h  IRegister.h  ISecuritySetup.h
Core/Inc/lib/DLMS-COSEM/wrapper/: SerialWrapper.h  TCPWrapper.h  Transport.h  Wrapper.h
Core/Src/: CMakeLists.txt
Core/Src/Linux/: .gitignore  Apps.cpp  BaseLibrary.cpp  CMakeLists.txt  COSEMClient.cpp  COSEMServer.cpp  Core.cpp  Debug.cpp  Memory.cpp  Scheduler.cpp  Serial.cpp  SimpleTimer.cpp  Socket.cpp  Synchronization.cpp  main.cpp
Core/Src/Linux/Objects/: Clock.cpp  Data.cpp  ProfileNameplate.cpp  Register.cpp
Core/Src/lib/: CMakeLists.txt
Core/Src/lib/DLMS-COSEM/: .gitignore  CMakeLists.txt  DLMSValue.cpp  DLMSVector.cpp
Core/Src/lib/DLMS-COSEM/APDU/: AARE.cpp  ACCESS-Request.cpp  ACCESS-Response.cpp  ACTION-Request.cpp  ACTION-Response.cpp  APDU.cpp  APDUConstants.cpp  APDUFactory.cpp  ASNType.cpp  GET-Request.cpp  GET-Response.cpp  SET-Request.cpp  xDLMS.cpp
Core/Src/lib/DLMS-COSEM/COSEM/: COSEM.cpp  COSEMClient.cpp  COSEMData.cpp  COSEMDevice.cpp  COSEMEngine.cpp  COSEMObjectInstanceID.cpp  COSEMSecurity.cpp  COSEMSecuritySuite.cpp  COSEMServer.cpp  DLMS-COSEM.cpp
Core/Src/lib/DLMS-COSEM/CircularBuffer/: CircularBuffer.cpp
Core/Src/lib/DLMS-COSEM/Device/: Association.cpp  LogicalDevice.cpp  SecuritySetup.cpp  StateMachine.cpp
Core/Src/lib/DLMS-COSEM/interfaces/: IAssociationLN.cpp  ICOSEMInterface.cpp  IClock.cpp  IData.cpp  IProfileGeneric.cpp  IRegister.cpp  ISecuritySetup.cpp
Core/Src/lib/DLMS-COSEM/wrapper/: SerialWrapper.cpp  TCPWrapper.cpp  Wrapper.cpp
config/: CMakeLists.txt  config.cpp  config.h  gcc-config.h  log.h  meter-config.cpp  meter-config.h  msvc-config.cpp  msvc-config.h
hdlc/: CMakeLists.txt  HDLCAddress.cpp  HDLCClient.cpp  HDLCHelpers.cpp  HDLCMAC.cpp  HDLCServer.cpp  HDLCStatistics.cpp  modcnt.cpp  packet.cpp
hdlc/include/: HDLCAddress.h  HDLCLLC.h  HDLCMAC.h
test/DLMS-COSEM-TEST/: CMakeLists.txt  DummySerial.h  UnitTest-APDU-AARE.cpp  UnitTest-APDU-AARQ.cpp  UnitTest-APDU-ACTION-Request.cpp  UnitTest-APDU-ACTION-Response.cpp  UnitTest-APDU-GET-Request.cpp  UnitTest-APDU-GET-Response.cpp  UnitTest-APDU-RLRE.cpp  UnitTest-APDU-RLRQ.cpp  UnitTest-APDU-xDLMS.cpp  UnitTest-COSEM-Client.cpp  UnitTest-COSEMObjectInstanceID.cpp  UnitTest-DLMSValue.cpp  UnitTest-HDLC-Address.cpp  UnitTest-HDLC-Client.cpp  UnitTest-HDLC-LLC.cpp  UnitTest-HDLC-MAC.cpp  UnitTest-HDLC-Packet.cpp  UnitTest-HDLC-Server.cpp  UnitTest-ICOSEMInterface.cpp  UnitTest-Interfaces-COSEMData.cpp  UnitTest-StateMachine.cpp  gcc_Debug.h
test/modbus/: modbus_read.cpp  modbus_read.hpp
